解决首屏缩放问题

--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -23,6 +23,7 @@
 			</div>
 		</div>
 		<div class="first-screen">
+			<div class="first-screen-holder-top"></div>
 			<div class="first-screen-holder"></div>
 		</div>
 		<div class="second-screen">
