增加html注释，解决定位元素层级问题

--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -16,16 +16,19 @@
 
 <body>
 	<div id="app" class="container">
+		<!-- 头部 -->
 		<div class="header">
 			<div class="header-inner">
 				<a href="//vwimport.agenda-bj.com/Beetle/index.html" class="logo-left"></a>
 				<a href="//vwimport.agenda-bj.com" class="logo-right"></a>
 			</div>
 		</div>
+		<!-- 第一屏 -->
 		<div class="first-screen">
 			<div class="first-screen-holder-top"></div>
 			<div class="first-screen-holder"></div>
 		</div>
+		<!-- 第二屏 -->
 		<div class="second-screen">
 			<div class="second-screen-desc">
 				<h2 class="second-screen-title">大众进口甲壳虫魅舞红特别版</h2>
@@ -38,6 +41,7 @@
 				</p>
 			</div>
 		</div>
+		<!-- 第三屏 -->
 		<div class="third-screen">
 			<div class="car-desc">
 				<!-- 左边3个特色及配置蒙版 -->
@@ -290,6 +294,7 @@
 				</div>
 			</div>
 		</div>
+		<!-- 底部 -->
 </body>
 
 </html>
