底部导航开发中

--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -289,12 +289,66 @@
 						</div>
 					</div>
 					<div class="table-comment">
-							* 工信部油耗  "S": 标准装备, "O": 选装, "-": 无此装备
+						* 工信部油耗 "S": 标准装备, "O": 选装, "-": 无此装备
 					</div>
 				</div>
 			</div>
 		</div>
 		<!-- 底部 -->
+		<div class="footer">
+			<div class="footer-inner">
+				<div class="navigator">
+				</div>
+				<div class="trial-form">
+					<div class="trial-form-top clearfix">
+						<input type="text" class="trial-text" placeholder="真实姓名">
+						<input type="text" class="trial-text" placeholder="联系电话">
+						<select name="province" class="trial-select">
+							<option value="default">省份</option>
+							<option value="shanghai">上海</option>
+							<option value="beijing">北京</option>
+						</select>
+						<select name="province" class="trial-select">
+							<option value="default">城市</option>
+							<option value="shanghai">上海</option>
+							<option value="beijing">北京</option>
+						</select>
+						<select name="province" class="trial-select-long">
+							<option value="default">经销商</option>
+							<option value="shanghai">上海经销商</option>
+							<option value="beijing">北京经销商</option>
+						</select>
+					</div>
+					<div class="trial-form-bottom clearfix">
+						<div class="t-f-b-item t-f-b-item-first">
+							<input id="info" class="trial-checkbox" type="checkbox" name="info" checked>
+							<div class="trial-label-cntr"><label class="trial-label" for="info">我希望大众汽车（中国）销售有限公司在将来提供 <br>其他的市场活动信息
+									</label>
+							</div>
+							
+						</div>
+						<div class="t-f-b-item t-f-b-item-second">
+							<input id="terms" class="trial-checkbox" type="checkbox" name="terms" checked>
+							<div class="trial-label-cntr"><label for="terms" class="trial-label">我已阅读并接受</label><span id="J_terms" class="trial-terms-link">数据保护条款</span>
+							</div>
+						</div>
+						<div class="t-f-b-item t-f-b-item-third">
+							<input type="submit" value="确认提交" class="trial-submit">
+						</div>
+						<div class="t-f-b-item">
+							<div class="icon-weibo" style="margin-right: 14px;">
+								<img src="./img/icon-weibo.png" alt="">
+							</div>	
+							<div class="icon-wechat">
+								<img src="./img/icon-wechat.png" alt="">
+							</div>	
+						</div>
+
+
+					</div>
+				</div>
+			</div>
+		</div>
 </body>
 
 </html>
