--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -298,6 +298,10 @@
 		<div class="footer">
 			<div class="footer-inner">
 				<div class="navigator">
+					<a class="navi-link navi-link-first cur"></a>
+					<a class="navi-link  navi-link-second"></a>
+					<a class="navi-link navi-link-third"></a>
+					<div class="navi-round"></div>		
 				</div>
 				<div class="trial-form">
 					<div class="trial-form-top clearfix">
@@ -325,7 +329,6 @@
 							<div class="trial-label-cntr"><label class="trial-label" for="info">我希望大众汽车（中国）销售有限公司在将来提供 <br>其他的市场活动信息
 									</label>
 							</div>
-							
 						</div>
 						<div class="t-f-b-item t-f-b-item-second">
 							<input id="terms" class="trial-checkbox" type="checkbox" name="terms" checked>
@@ -343,8 +346,6 @@
 								<img src="./img/icon-wechat.png" alt="">
 							</div>	
 						</div>
-
-
 					</div>
 				</div>
 			</div>
