完成微信分享

--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -344,12 +344,16 @@
 						<div class="t-f-b-item t-f-b-item-third">
 							<input id="J_trial_submit" type="submit" value="确认提交" class="trial-submit">
 						</div>
-						<div class="t-f-b-item">
+						<div class="t-f-b-item social-item">
 							<div class="icon-weibo" style="margin-right: 14px;">
 								<img src="./img/icon-weibo.png" alt="">
 							</div>
-							<div class="icon-wechat">
+							<div id="J_icon_wechat" class="icon-wechat">
 								<img src="./img/icon-wechat.png" alt="">
+							</div>
+							<div id="J_wechat_share" class="share-box">
+									<div class="share-code"><img src="./img/share-code.png" alt=""></div>
+									<div id="J_share_code_close" class="share-close"><img src="./img/bomb-close.png" alt=""></div>
 							</div>
 						</div>
 					</div>
