完成导航滚动至对应楼层效果，更新2屏背景图

--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -29,7 +29,7 @@
 			<div class="first-screen-holder"></div>
 		</div>
 		<!-- 第二屏 -->
-		<div class="second-screen">
+		<div id="J_second_screen" class="second-screen">
 			<div class="second-screen-desc">
 				<h2 class="second-screen-title">大众进口甲壳虫魅舞红特别版</h2>
 				<p class="second-screen-main">最IN焦点 尽情而红</p>
@@ -42,7 +42,7 @@
 			</div>
 		</div>
 		<!-- 第三屏 -->
-		<div class="third-screen">
+		<div id="J_third_screen" class="third-screen">
 			<div class="car-desc">
 				<!-- 左边3个特色及配置蒙版 -->
 				<div class="car-desc-left">
