增加底部导航上升效果，增加导航高亮复原效果

--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -295,7 +295,7 @@
 			</div>
 		</div>
 		<!-- 底部 -->
-		<div class="footer">
+		<div id="J_footer" class="footer">
 			<div class="footer-inner">
 				<!-- 导航 -->
 				<div class="navigator">
